fixed "Participants" always visible, "download csv" has cursor icon

--- a/webapp/src/app/pages/meeting/meeting.component.scss
+++ b/webapp/src/app/pages/meeting/meeting.component.scss
@@ -16,6 +16,7 @@
   margin-top: 30px;
   padding-right: 0px;
   text-align: right;
+  cursor: pointer;
 }
 
 .meeting-header-label{
